apps/book-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-api-service
  labels:
    app.service.name: book-api
spec:
  ports:
    - port: 80
      targetPort: 9090
      name: http-port
  selector:
    app.service.name: book-api
